--- a/libs/blog/styles/src/index.css
+++ b/libs/blog/styles/src/index.css
@@ -1,4 +1,4 @@
-@use './reset';
+@import './reset.css';
 
 html {
   font-size: 62.5%;
@@ -10,7 +10,7 @@ body {
 }
 
 a {
-  text-underline-offset: .2em;
+  text-underline-offset: 0.2em;
 }
 
 p {
