--- a/apps/blog/src/app/global.css
+++ b/apps/blog/src/app/global.css
@@ -58,14 +58,19 @@ pre {
   margin-bottom: 2.4rem;
 }
 
+ul {
+  list-style: none;
+}
+
 h3 {
-  font-size: 3.2rem;
-  margin-bottom: 1.8rem;
+  font-size: 2.2rem;
+  margin-top: 3.2rem;
+  margin-bottom: 1.2rem;
 }
 
 h4 {
-  font-size: 2.2rem;
-  margin-bottom: 1.2rem;
+  font-size: 1.8rem;
+  margin-bottom: 1rem;
 }
 
 pre {
