--- a/libs/blog/components/src/PostHeader/PostHeader.module.css
+++ b/libs/blog/components/src/PostHeader/PostHeader.module.css
@@ -1,3 +1,11 @@
 .title {
-  font-size: 4.8rem;
+  font-size: 4.4rem;
+  font-weight: 600;
+}
+
+.subTitle {
+  font-size: 1.8rem;
+  margin: -0.5rem 0 0 0;
+  padding: 0;
+  opacity: 0.7;
 }
