--- a/libs/blog/components/src/SiteFooter/SiteFooter.module.css
+++ b/libs/blog/components/src/SiteFooter/SiteFooter.module.css
@@ -1,7 +1,7 @@
 .SiteFooter {
   width: min(var(--content-width, 68rem), 100% - var(--space-lg, 2.4rem) * 2);
   margin: 0 auto;
-  padding: var(--space-lg, 2.4rem) 0;
+  padding: var(--space-md, 1.2rem) 0;
 }
 
 .links {
